--- a/index.html
+++ b/index.html
@@ -18,19 +18,24 @@
   <header>
 
     <nav>
-      <ul>
+      <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+      <label for="nav-trigger"></label>
+
+      <ul class="navigation">
         <li><a href="#00">00. Contents</a></li>
         <li><a href="#01">01. Introduction</a></li>
-        <li><a href="#02">02. Link</a></li>
-        <li><a href="#02">02. Link</a></li>
-        <li><a href="#02">02. Link</a></li>
-        <li><a href="#02">02. Link</a></li>
-        <li><a href="#02">02. Link</a></li>
-        <li><a href="#02">02. Link</a></li>
-        <li><a href="#02">02. Link</a></li>
-        <li><a href="#02">02. Link</a></li>
+        <li><a href="#02">02. Foreword</a></li>
+        <li><a href="#03">03. Get started</a></li>
+        <li><a href="#04">04. Link</a></li>
+        <li><a href="#05">05. Link</a></li>
+        <li><a href="#06">06. Link</a></li>
+        <li><a href="#07">07. Link</a></li>
+        <li><a href="#08">08. Link</a></li>
+        <li><a href="#09">09. Link</a></li>
       </ul>
     </nav>
+
+
 
     <hgroup>
       <h1>Wordpress guide</h1>
@@ -42,12 +47,13 @@
 
   <section id="00">
     <article>
+
       <hgroup class="page-title">
         <h5>00. Contents</h5>
         <h3>What's in here?</h3>
       </hgroup>
 
-      <div class="page-descr">
+
         <figure>
           <img src="//lorempixel.com/800/600?7" alt="">
           <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
@@ -59,7 +65,11 @@
           <li><a href="">01. Hello</a></li>
           <li><a href="">01. Hello</a></li>
         </ul>
-      </div>
+        <figure>
+          <img src="//lorempixel.com/800/600?8" alt="">
+          <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
+        </figure>
+
     </article>
   </section>
 
@@ -129,7 +139,34 @@
     </article>
   </section>
 
-
+  <section id="03">
+    <article>
+      <hgroup class="page-title">
+        <h5>03. Get started</h5>
+        <h3>WordPress is great and easy to learn</h3>
+      </hgroup>
+      <div class="page-descr">
+        <p>
+          <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <figure>
+          <img src="//lorempixel.com/800/1000?3" alt="">
+          <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
+        </figure>
+        <p>
+          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+        </p>
+        <ul>
+          <li>Lorem ipsum dolor sit amet, consectetur.</li>
+          <li>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</li>
+          <li>Quis autem vel eum iure reprehenderit</li>
+        </ul>
+        <p>
+          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+        </p>
+      </div>
+    </article>
+  </section>
 
   <footer>
     <ul>
@@ -137,7 +174,7 @@
     </ul>
   </footer>
 
-  <a href="#00" class="backtotop">Back to top</a>
+  <a href="#top" class="backtotop">Back to top</a>
 </div>
 
 <script>
