--- a/index.html
+++ b/index.html
@@ -53,22 +53,25 @@
         <h3>What's in here?</h3>
       </hgroup>
 
+      <figure>
+        <img src="//lorempixel.com/800/600?7" alt="">
+        <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
+      </figure>
 
-        <figure>
-          <img src="//lorempixel.com/800/600?7" alt="">
-          <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
-        </figure>
-        <ul>
-          <li><a href="#introduction">00. Contents</a></li>
-          <li><a href="">01. Hello</a></li>
-          <li><a href="">01. Hello</a></li>
-          <li><a href="">01. Hello</a></li>
-          <li><a href="">01. Hello</a></li>
-        </ul>
-        <figure>
-          <img src="//lorempixel.com/800/600?8" alt="">
-          <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
-        </figure>
+      <ul>
+        <li><a href="#introduction">00. Contents</a></li>
+        <li><a href="">01. Hello</a></li>
+        <li><a href="">01. Hello</a></li>
+        <li><a href="">01. Hello</a></li>
+        <li><a href="">01. Hello</a></li>
+      </ul>
+
+      <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <figure>
+        <img src="//lorempixel.com/800/600?8" alt="">
+        <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
+      </figure>
 
     </article>
   </section>
@@ -79,34 +82,36 @@
         <h5>01. Heading goes here</h5>
         <h3>Introduction</h3>
       </hgroup>
-      <div class="page-descr">
-        <p>
-          Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
 
+      <p>
+        Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+
+      <figure>
+        <img src="//lorempixel.com/800/800?13" alt="">
+        <figcaption><strong>Fig 01.B</strong>Caption goes here</figcaption>
+      </figure>
+
+      <ol>
+        <li>Me, I get wild every rhyme I release</li>
+        <li>Whether I talk about violence or talk about peace</li>
+        <li>Cause violence is somethin that happens in society</li>
+        <li>When people are livin low and don't kow where they can go</li>
+        <li>But peace, I think we all want peace</li>
+        <li>But it's too much to face and it's too far to reach</li>
+        <li>Whether I say my rhymes fast, slow, sloppy or neat</li>
+        <li>See, I wish when I'm doin, to have freedom of speech</li>
+      </ol>
+
+      <p>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+        </p>
         <figure>
-          <img src="//lorempixel.com/800/800?4" alt="">
-          <figcaption><strong>Fig 01.B</strong>Caption goes here</figcaption>
+          <img src="//lorempixel.com/800/800?12" alt="">
+          <figcaption><strong>Fig 01.A</strong> Caption goes here</figcaption>
         </figure>
-
-        <ol>
-          <li>Me, I get wild every rhyme I release</li>
-          <li>Whether I talk about violence or talk about peace</li>
-          <li>But peace, I think we all want peace</li>
-          <li>But it's too much to face and it's too far to reach</li>
-          <li>I wish for each, to have freedom of sspeech</li>
-        </ol>
-
-        <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-          </p>
-          <figure>
-            <img src="//lorempixel.com/800/800?2" alt="">
-            <figcaption><strong>Fig 01.A</strong> Caption goes here</figcaption>
-          </figure>
-          <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-        </p>
-      </div>
+        <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+      </p>
     </article>
   </section>
 
@@ -116,26 +121,26 @@
         <h5>02. Heading goes here</h5>
         <h3>Foreword</h3>
       </hgroup>
-      <div class="page-descr">
-        <p>
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <figure>
-          <img src="//lorempixel.com/800/1000?3" alt="">
-          <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
-        </figure>
-        <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-        </p>
-        <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur.</li>
-          <li>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</li>
-          <li>Quis autem vel eum iure reprehenderit</li>
-        </ul>
-        <p>
-          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-        </p>
-      </div>
+
+      <p>
+        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <figure>
+        <img src="//lorempixel.com/800/1000?11" alt="">
+        <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
+      </figure>
+      <p>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+      </p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur.</li>
+        <li>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</li>
+        <li>Quis autem vel eum iure reprehenderit</li>
+      </ul>
+      <p>
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+      </p>
+
     </article>
   </section>
 
@@ -145,32 +150,31 @@
         <h5>03. Get started</h5>
         <h3>WordPress is great and easy to learn</h3>
       </hgroup>
-      <div class="page-descr">
-        <p>
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <figure>
-          <img src="//lorempixel.com/800/1000?3" alt="">
-          <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
-        </figure>
-        <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-        </p>
-        <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur.</li>
-          <li>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</li>
-          <li>Quis autem vel eum iure reprehenderit</li>
-        </ul>
-        <p>
-          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-        </p>
-      </div>
+
+      <p>
+        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <figure>
+        <img src="//lorempixel.com/800/1000?10" alt="">
+        <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
+      </figure>
+      <p>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+      </p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur.</li>
+        <li>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</li>
+        <li>Quis autem vel eum iure reprehenderit</li>
+      </ul>
+      <p>
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+      </p>
     </article>
   </section>
 
   <footer>
     <ul>
-      <li>&copy; <script>new Date().getFullYear()>2010&&document.write(+new Date().getFullYear());</script>, The Sun.</li>
+      <li>&copy; <script>new Date().getFullYear()>2010&&document.write(+new Date().getFullYear());</script> The Sun</li>
     </ul>
   </footer>
 
