About to install Bourbon and Neat

--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
         <h3>What's in here?</h3>
       </hgroup>
 
-      <figure>
-        <img src="//lorempixel.com/800/600?7" alt="">
-        <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
-      </figure>
+
 
       <ul>
         <li><a href="#introduction">00. Contents</a></li>
@@ -66,11 +63,16 @@
         <li><a href="">01. Hello</a></li>
       </ul>
 
+      <figure>
+        <img src="https://unsplash.it/600/400?01" alt="">
+        <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
+      </figure>
+
       <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
       <figure>
-        <img src="//lorempixel.com/800/600?8" alt="">
-        <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
+        <img src="https://unsplash.it/600/300?02" alt="">
+        <figcaption><strong>Fig. 00.B</strong>Howdy</figcaption>
       </figure>
 
     </article>
@@ -88,26 +90,23 @@
       </p>
 
       <figure>
-        <img src="//lorempixel.com/800/800?13" alt="">
+        <img src="https://unsplash.it/400/300?03" alt="">
         <figcaption><strong>Fig 01.B</strong>Caption goes here</figcaption>
       </figure>
 
       <ol>
-        <li>Me, I get wild every rhyme I release</li>
-        <li>Whether I talk about violence or talk about peace</li>
-        <li>Cause violence is somethin that happens in society</li>
-        <li>When people are livin low and don't kow where they can go</li>
-        <li>But peace, I think we all want peace</li>
-        <li>But it's too much to face and it's too far to reach</li>
-        <li>Whether I say my rhymes fast, slow, sloppy or neat</li>
-        <li>See, I wish when I'm doin, to have freedom of speech</li>
+        <li>Put. That coffee. Down. Coffee's for closers only.</li>
+        <li>As you all know first prize is a Cadillac El Dorado. Anyone wanna see second prize? Second prize is a set of steak knives. Third prize is you're fired.</li>
+        <li>Blake: A-B-C. A-Always, B-Be, C-Closing. Always be closing, always be closing. </li>
+        <li>These are the new leads. These are the Glengarry leads. And to you they're gold, and you don't get them. Why? Because to give them to you would be throwing them away. They're for closers.</li>
+
       </ol>
 
       <p>
         Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </p>
         <figure>
-          <img src="//lorempixel.com/800/800?12" alt="">
+          <img src="https://unsplash.it/600/300?04" alt="">
           <figcaption><strong>Fig 01.A</strong> Caption goes here</figcaption>
         </figure>
         <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
@@ -126,7 +125,7 @@
         <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
       <figure>
-        <img src="//lorempixel.com/800/1000?11" alt="">
+        <img src="https://unsplash.it/600/500?05" alt="">
         <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
       </figure>
       <p>
@@ -155,7 +154,7 @@
         <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
       <figure>
-        <img src="//lorempixel.com/800/1000?10" alt="">
+        <img src="https://unsplash.it/600/600?06" alt="">
         <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
       </figure>
       <p>
