Cleanup - Flex-Box

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <section id="00">
     <article>
 
-      <hgroup class="page-title">
+      <hgroup>
         <h5>00. Contents</h5>
         <h3>What's in here?</h3>
       </hgroup>
@@ -61,50 +61,45 @@
         <li><a href="#02">02. Foreword</a></li>
         <li><a href="#03">03. Get started</a></li>
         <li><a href="#04">04. Long title goes here - will probably stretch out to two lines</a></li>
+        <li><a href="#00">05. Link</a></li>
+        <li><a href="#00">06. Link</a></li>
+        <li><a href="#00">07. Link</a></li>
+        <li><a href="#00">08. Link</a></li>
+        <li><a href="#00">09. Link</a></li>
+        <li><a href="#00">10. Link</a></li>
+        <li><a href="#00">11. Link</a></li>
+        <li><a href="#00">12. Link</a></li>
       </ul>
 
       <figure>
-        <img src="https://unsplash.it/600/400?01" alt="">
+        <img src="https://unsplash.it/600/400?00a" alt="">
         <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
       </figure>
 
       <p>Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
+
       <figure>
-        <img src="https://unsplash.it/620/300?07" alt="">
-        <figcaption><strong>Fig. 00.B</strong>Howdy</figcaption>
-      </figure>
-      <figure>
-        <img src="https://unsplash.it/600/320?08" alt="">
-        <figcaption><strong>Fig. 00.B</strong>Howdy</figcaption>
-      </figure>
-      <figure>
-        <img src="https://unsplash.it/620/320?09" alt="">
+        <img src="https://unsplash.it/620/300?00b" alt="">
         <figcaption><strong>Fig. 00.B</strong>Howdy</figcaption>
       </figure>
 
-        <figure>
-          <img src="//lorempixel.com/800/600?7" alt="">
-          <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
-        </figure>
-        <ul>
-          <li><a href="#introduction">00. Contents</a></li>
-          <li><a href="">01. Hello</a></li>
-          <li><a href="">01. Hello</a></li>
-          <li><a href="">01. Hello</a></li>
-          <li><a href="">01. Hello</a></li>
-        </ul>
-        <figure>
-          <img src="//lorempixel.com/800/600?8" alt="">
-          <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
-        </figure>
+      <figure>
+        <img src="https://unsplash.it/600/320?00c" alt="">
+        <figcaption><strong>Fig. 00.B</strong>Howdy</figcaption>
+      </figure>
+
+      <figure>
+        <img src="https://unsplash.it/800/600?00d" alt="">
+        <figcaption><strong>Fig. 00.A</strong>Howdy</figcaption>
+      </figure>
 
     </article>
   </section>
 
   <section id="01">
     <article>
-      <hgroup class="page-title">
+      <hgroup>
         <h5>01. Heading goes here</h5>
         <h3>Introduction</h3>
       </hgroup>
@@ -114,8 +109,8 @@
       </p>
 
       <figure>
-        <img src="https://unsplash.it/400/300?03" alt="">
-        <figcaption><strong>Fig 01.B</strong>Caption goes here</figcaption>
+        <img src="https://unsplash.it/400/300?01a" alt="">
+        <figcaption><strong>Fig 01.A</strong>Caption goes here</figcaption>
       </figure>
 
       <ol>
@@ -129,48 +124,47 @@
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
       </p>
       <figure>
-        <img src="https://unsplash.it/600/300?04" alt="">
-        <figcaption><strong>Fig 01.A</strong> Caption goes here</figcaption>
+        <img src="https://unsplash.it/600/300?01b" alt="">
+        <figcaption><strong>Fig 01.B</strong> Caption goes here</figcaption>
       </figure>
 
       <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
       </p>
 
-      <div class="page-descr">
-        <p>
-          Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
 
+      <p>
+        Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+
+      <figure>
+        <img src="https://unsplash.it/800/800?01c" alt="">
+        <figcaption><strong>Fig 01.C</strong>Caption goes here</figcaption>
+      </figure>
+
+      <ol>
+        <li>Me, I get wild every rhyme I release</li>
+        <li>Whether I talk about violence or talk about peace</li>
+        <li>But peace, I think we all want peace</li>
+        <li>But it's too much to face and it's too far to reach</li>
+        <li>I wish for each, to have freedom of sspeech</li>
+      </ol>
+
+      <p>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+        </p>
         <figure>
-          <img src="//lorempixel.com/800/800?4" alt="">
-          <figcaption><strong>Fig 01.B</strong>Caption goes here</figcaption>
+          <img src="https://unsplash.it/800/900?01d" alt="">
+          <figcaption><strong>Fig 01.D</strong> Caption goes here</figcaption>
         </figure>
-
-        <ol>
-          <li>Me, I get wild every rhyme I release</li>
-          <li>Whether I talk about violence or talk about peace</li>
-          <li>But peace, I think we all want peace</li>
-          <li>But it's too much to face and it's too far to reach</li>
-          <li>I wish for each, to have freedom of sspeech</li>
-        </ol>
-
-        <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-          </p>
-          <figure>
-            <img src="//lorempixel.com/800/800?2" alt="">
-            <figcaption><strong>Fig 01.A</strong> Caption goes here</figcaption>
-          </figure>
-          <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-        </p>
-      </div>
+        <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+      </p>
 
     </article>
   </section>
 
   <section id="02">
     <article>
-      <hgroup class="page-title">
+      <hgroup>
         <h5>02. Heading goes here</h5>
         <h3>Foreword</h3>
       </hgroup>
@@ -179,7 +173,7 @@
         <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
       <figure>
-        <img src="https://unsplash.it/600/500?05" alt="">
+        <img src="https://unsplash.it/600/500?02a" alt="">
         <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
       </figure>
       <p>
@@ -194,32 +188,31 @@
         Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
       </p>
 
-      <div class="page-descr">
-        <p>
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <figure>
-          <img src="//lorempixel.com/800/1000?3" alt="">
-          <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
-        </figure>
-        <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-        </p>
-        <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur.</li>
-          <li>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</li>
-          <li>Quis autem vel eum iure reprehenderit</li>
-        </ul>
-        <p>
-          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-        </p>
-      </div>
+
+      <p>
+        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <figure>
+        <img src="https://unsplash.it/800/1000?02b" alt="">
+        <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
+      </figure>
+      <p>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+      </p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur.</li>
+        <li>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</li>
+        <li>Quis autem vel eum iure reprehenderit</li>
+      </ul>
+      <p>
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+      </p>
     </article>
   </section>
 
   <section id="03">
     <article>
-      <hgroup class="page-title">
+      <hgroup>
         <h5>03. Get started</h5>
         <h3>WordPress is great and easy to learn</h3>
       </hgroup>
@@ -228,7 +221,7 @@
         <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
       <figure>
-        <img src="https://unsplash.it/600/600?06" alt="">
+        <img src="https://unsplash.it/600/600?03a" alt="">
         <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
       </figure>
       <p>
@@ -243,26 +236,26 @@
         Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
       </p>
 
-      <div class="page-descr">
-        <p>
-          <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <figure>
-          <img src="//lorempixel.com/800/1000?3" alt="">
-          <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
-        </figure>
-        <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-        </p>
-        <ul>
-          <li>Lorem ipsum dolor sit amet, consectetur.</li>
-          <li>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</li>
-          <li>Quis autem vel eum iure reprehenderit</li>
-        </ul>
-        <p>
-          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
-        </p>
-      </div>
+
+      <p>
+        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <figure>
+        <img src="https://unsplash.it/800/1000?03b" alt="">
+        <figcaption><strong>Fig 02.a</strong>Caption goes here</figcaption>
+      </figure>
+      <p>
+        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+      </p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur.</li>
+        <li>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</li>
+        <li>Quis autem vel eum iure reprehenderit</li>
+      </ul>
+      <p>
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+      </p>
+
     </article>
   </section>
 
